Removed Horizontal line below header

--- a/SDE/resume.cls
+++ b/SDE/resume.cls
@@ -61,7 +61,7 @@
         \hfill{\MakeUppercase{\Huge\bfseries #1}}\hfill
         \break
         \vspace{-0.5em}
-        \hrule
+        % \hrule
     \endgroup
 }%
 
