--- a/SDE/SDE.tex
+++ b/SDE/SDE.tex
@@ -46,7 +46,7 @@
     ] \\
     \skillItem[
         category={Tools and Frameworks},
-        skills={AWS, Linux, Kafka, PostmanAPI, Docker, Kubernetes, Nginx, Gunicorn, Kafka, React, Flask, FastAPI, Node.js, PyTorch, TensorFlow, Zookeeper, Splunk, Github Actions, Terraform, Ansible, Git, Gitlab, Prometheus, Grafana, Jenkins, Cribl, Zabbix, Chef}
+        skills={AWS, Linux, Kafka, PostmanAPI, Docker, Kubernetes, Nginx, Gunicorn, React, Flask, FastAPI, Node.js, PyTorch, TensorFlow, Zookeeper, Splunk, Github Actions, Terraform, Ansible, Git, Gitlab, Prometheus, Grafana, Jenkins}
     ] \\
     \skillItem[
         category={Methodologies},
