Bolded key-words in DevOps resume

--- a/DevOps/DevOps.tex
+++ b/DevOps/DevOps.tex
@@ -65,7 +65,7 @@
     \begin{itemize}
         \itemsep -6pt {}
         \item Developing \textbf{FlowBench}, a workflow-based distributed benchmark by leveraging \textbf{Python}, \textbf{Docker}, and edge computing principles to evaluate custom software performance metrics and optimize deployment algorithms
-        \item Built and tested a video analytics workflow via \textbf{OpenCV} on a containerized microservices architecture with Kubernetes, implementing serverless functions for motion detection, frame extraction, face detection, and recognition
+        \item Built and tested a video analytics workflow via \textbf{OpenCV} on a containerized microservices architecture with \textbf{Kubernetes}, implementing serverless functions for motion detection, frame extraction, face detection, and recognition
     \end{itemize}
 
     \experienceItem[
@@ -107,7 +107,7 @@
     \begin{itemize}
         \vspace{-0.5em}
         \itemsep -6pt {}
-        \item Developed a Firefox extension and a Go backend (Gorilla Mux, database/sql) to capture and ingest job application data, storing entries in a structured SQL database
+        \item Developed a Firefox extension and a \textbf{Go} backend (Gorilla Mux, database/sql) to capture and ingest job application data, storing entries in a structured \textbf{SQL database}
         \item Added signal-based graceful shutdown to export data to CSV and truncate the table automatically, saving ~1–2 hours/week otherwise spent manually tracking applications   
     \end{itemize}
 
@@ -118,7 +118,7 @@
     \begin{itemize}
         \vspace{-0.5em}
         \itemsep -6pt {}
-        \item Automated end-to-end AWS EC2 provisioning using Terraform, Ansible, Jenkins, and GitHub Actions, enabling reproducible infrastructure setup and hands-free web service deployments
+        \item Automated end-to-end AWS EC2 provisioning using \textbf{Terraform}, \textbf{Ansible}, \textbf{Jenkins}, and \textbf{GitHub Actions}, enabling reproducible infrastructure setup and hands-free web service deployments
         \item Built and optimized CI/CD pipelines to dynamically retrieve instance IPs, configure secure SSH access, and deploy services, eliminating manual intervention and resolving IAM and resource issues in production-like environments
     \end{itemize}
 
@@ -129,7 +129,7 @@
     \begin{itemize}
         \vspace{-0.5em}
         \itemsep -6pt {}
-        \item Developed and deployed a Flask-based image recognition app using Gunicorn on AWS EC2, enabling HTTP-based uploads and forwarding images to S3 via SQS for asynchronous processing
+        \item Developed and deployed a \textbf{Flask}-based image recognition app using \textbf{Gunicorn} on AWS EC2, enabling HTTP-based uploads and forwarding images to S3 via SQS for asynchronous processing
         \item Designed an auto-scaling app tier that scaled up to 20 EC2 instances based on SQS queue depth, ensuring efficient, real-time image processing under varying workloads
     \end{itemize}
     
