--- a/DevOps/DevOps.tex
+++ b/DevOps/DevOps.tex
@@ -49,7 +49,7 @@
         skills={AWS, Linux (RHEL, Ubuntu), PostmanAPI, Docker, Kubernetes, Nginx, Gunicorn, Flask, FastAPI, Node.js, Zookeeper, Splunk, Github Actions, Terraform, Ansible, Git, Gitlab, Prometheus, Grafana, Jenkins, Cribl, Zabbix, Chef}
     ] \\
     \skillItem[
-        category={Methodologies},
+        category={Miscellaneous},
         skills={Distributed Systems, RESTful APIs, Microservices Architecture, Object-Oriented Programming, Agile, SDLC, Configuration Management, Infrastructure Management}
     ]
 \end{skillsSection}
