Changed role names for SDE resume

--- a/SDE/SDE.tex
+++ b/SDE/SDE.tex
@@ -42,7 +42,7 @@
 \begin{skillsSection}{Skills}
     \skillItem[
         category={Languages and Databases},
-        skills={Python, C++, Bash, SQL (Postgres, MySQL), NoSQL (MongoDB), Go, Scala, HTML, JavaScript, Java}
+        skills={Python, C++, Bash, SQL (Postgres, MySQL), NoSQL (MongoDB), Go, JavaScript, Scala, HTML, Java}
     ] \\
     \skillItem[
         category={Tools and Frameworks},
@@ -73,7 +73,7 @@
     \experienceItem[
         company={Arch Mortgage Insurance},
         location={Greensboro, NC},
-        position={IT-Infrastructure-Platform/SRE Intern},
+        position={Software Engineer Intern},
         duration={Jun 2024 - Aug 2024}
     ]
     \begin{itemize}
@@ -86,7 +86,7 @@
     \experienceItem[
         company={Cerner Healthcare},
         location={Bangalore, KA},
-        position={System Engineer - 1},
+        position={Software Engineer - Systems},
         duration={May 2021 - Jul 2023}
     ]
     \begin{itemize}
