Put Docker and Kubernetes earlier in the order, and added a Java specific resume to the mix

--- a/DevOps/DevOps.tex
+++ b/DevOps/DevOps.tex
@@ -46,7 +46,7 @@
     ] \\
     \skillItem[
         category={Tools and Frameworks},
-        skills={AWS, Linux (RHEL, Ubuntu), PostmanAPI, Docker, Kubernetes, Nginx, Gunicorn, Flask, FastAPI, Node.js, Zookeeper, Splunk, Github Actions, Terraform, Ansible, Git, Gitlab, Prometheus, Grafana, Jenkins, Cribl, Zabbix, Chef}
+        skills={AWS, Linux (RHEL, Ubuntu), Docker, Kubernetes, PostmanAPI, Nginx, Gunicorn, Flask, FastAPI, Node.js, Zookeeper, Splunk, Github Actions, Terraform, Ansible, Git, Gitlab, Prometheus, Grafana, Jenkins, Cribl, Zabbix, Chef}
     ] \\
     \skillItem[
         category={Miscellaneous},
