Added some keywords to DevOps resume to help with ATS

--- a/DevOps/DevOps.tex
+++ b/DevOps/DevOps.tex
@@ -46,11 +46,11 @@
     ] \\
     \skillItem[
         category={Tools and Frameworks},
-        skills={AWS, Linux (RHEL, Ubuntu), Docker, Kubernetes, PostmanAPI, Nginx, Gunicorn, Flask, FastAPI, Node.js, Zookeeper, Splunk, Github Actions, Terraform, Ansible, Git, Gitlab, Prometheus, Grafana, Jenkins, Cribl, Zabbix, Chef}
+        skills={AWS, Linux (RHEL, Ubuntu), Docker, Kubernetes, PostmanAPI, Nginx, Gunicorn, Flask, FastAPI, Node.js, Zookeeper, Splunk, Github Actions, Terraform, Ansible, Git (Version Control), Gitlab, Prometheus, Grafana, Jenkins, Cribl, Zabbix, Chef}
     ] \\
     \skillItem[
         category={Miscellaneous},
-        skills={Distributed Systems, RESTful APIs, Microservices Architecture, Object-Oriented Programming, Agile, SDLC, Configuration Management, Infrastructure Management}
+        skills={Distributed Systems, RESTful APIs, Microservices Architecture, Object-Oriented Programming, Agile, SDLC, DevOps, Configuration Management, Infrastructure as code, Incident Management}
     ]
 \end{skillsSection}
 
@@ -91,7 +91,7 @@
         \itemsep -6pt {}
         \item Migrated 80\% of data from on-prem to \textbf{AWS}, enhancing data access flexibility, security, and cost-efficiency
         \item Participated in regular on-call rotations, leveraging \textbf{Zabbix} and \textbf{Splunk} for system health monitoring, troubleshooting server issues, and resolving production alerts within 15 minutes, maintaining \textbf{99.99\%} service reliability
-        \item Troubleshot and resolved \textbf{Jenkins} pipeline issues, minimizing support ticket resolution time by \textbf{40\%} and ensuring \textbf{99.9\%} uptime for \textbf{CI/CD} workflows, leading to uninterrupted deployment pipelines
+        \item Performed troubleshooting \textbf{Jenkins} pipeline issues, minimizing support ticket resolution time by \textbf{40\%} and ensuring \textbf{99.9\%} uptime for \textbf{CI/CD} workflows, leading to uninterrupted deployment pipelines
         \item Managed \textbf{300+} bi-weekly microservice deployments, including Splunk and non-Splunk-based services, using \textbf{Chef}, accelerating delivery of new UI and backend features in a fast-paced production environment
     \end{itemize}
 
