--- a/DevOps/DevOps.tex
+++ b/DevOps/DevOps.tex
@@ -42,11 +42,11 @@
 \begin{skillsSection}{Skills}
     \skillItem[
         category={Languages and Databases},
-        skills={Python, C++, Bash, SQL (Postgres), NoSQL (MongoDB), Go, Scala, HTML, JavaScript, Java}
+        skills={Python, C++, Bash, PowerShell SQL (Postgres, MySQL), NoSQL (MongoDB), Go, Scala, HTML, JavaScript, Java}
     ] \\
     \skillItem[
         category={Tools and Frameworks},
-        skills={AWS, Linux (RHEL, Ubuntu), Docker, Kubernetes, PostmanAPI, Nginx, Gunicorn, Flask, FastAPI, Node.js, Zookeeper, Splunk, Github Actions, Terraform, Ansible, Git (Version Control), Gitlab, Prometheus, Grafana, Jenkins, Cribl, Zabbix, Chef}
+        skills={AWS (EC2, ECR, S3, CloudFormation, Lambda, etc), Linux (RHEL, Ubuntu), Docker, Kubernetes, PostmanAPI, Nginx, Gunicorn, Flask, FastAPI, Node.js, Zookeeper, Splunk, Github Actions, Terraform, Ansible, Git (Version Control), Gitlab, Prometheus, Grafana, Jenkins, Cribl, Zabbix, Chef}
     ] \\
     \skillItem[
         category={Miscellaneous},
